// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cosmwasm/wasm/v1/tx MsgExecuteContract 1`] = `
"export const AminoConverter = {
  "/cosmwasm.wasm.v1.MsgExecuteContract": {
    aminoType: "wasm/MsgExecuteContract",
    toAmino: ({
      sender,
      contract,
      msg,
      funds
    }: MsgExecuteContract): MsgExecuteContractAminoType["value"] => {
      return {
        sender: omitDefault(sender),
        contract: omitDefault(contract),
        msg: JSON.parse(fromUtf8(msg)),
        funds: funds.map(el0 => ({
          denom: omitDefault(el0.denom),
          amount: omitDefault(el0.amount)
        }))
      };
    },
    fromAmino: ({
      sender,
      contract,
      msg,
      funds
    }: MsgExecuteContractAminoType["value"]): MsgExecuteContract => {
      return {
        sender,
        contract,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds.map(el0 => ({
          denom: el0.denom,
          amount: el0.amount
        }))
      };
    }
  }
};"
`;

exports[`cosmwasm/wasm/v1/tx MsgInstantiateContract 1`] = `
"export const AminoConverter = {
  "/cosmwasm.wasm.v1.MsgInstantiateContract": {
    aminoType: "wasm/MsgInstantiateContract",
    toAmino: ({
      sender,
      admin,
      codeId,
      label,
      msg,
      funds
    }: MsgInstantiateContract): MsgInstantiateContractAminoType["value"] => {
      return {
        sender: omitDefault(sender),
        admin: omitDefault(admin),
        code_id: omitDefault(codeId)?.toString?.(),
        label: omitDefault(label),
        msg: JSON.parse(fromUtf8(msg)),
        funds: funds.map(el0 => ({
          denom: omitDefault(el0.denom),
          amount: omitDefault(el0.amount)
        }))
      };
    },
    fromAmino: ({
      sender,
      admin,
      code_id,
      label,
      msg,
      funds
    }: MsgInstantiateContractAminoType["value"]): MsgInstantiateContract => {
      return {
        sender,
        admin,
        codeId: BigInt(code_id),
        label,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds.map(el0 => ({
          denom: el0.denom,
          amount: el0.amount
        }))
      };
    }
  }
};"
`;

exports[`cosmwasm/wasm/v1/tx MsgMigrateContract 1`] = `
"export const AminoConverter = {
  "/cosmwasm.wasm.v1.MsgMigrateContract": {
    aminoType: "wasm/MsgMigrateContract",
    toAmino: ({
      sender,
      contract,
      codeId,
      msg
    }: MsgMigrateContract): MsgMigrateContractAminoType["value"] => {
      return {
        sender: omitDefault(sender),
        contract: omitDefault(contract),
        code_id: omitDefault(codeId)?.toString?.(),
        msg: JSON.parse(fromUtf8(msg))
      };
    },
    fromAmino: ({
      sender,
      contract,
      code_id,
      msg
    }: MsgMigrateContractAminoType["value"]): MsgMigrateContract => {
      return {
        sender,
        contract,
        codeId: BigInt(code_id),
        msg: toUtf8(JSON.stringify(msg))
      };
    }
  }
};"
`;

exports[`cosmwasm/wasm/v1/tx MsgStoreCode 1`] = `
"export const AminoConverter = {
  "/cosmwasm.wasm.v1.MsgStoreCode": {
    aminoType: "wasm/MsgStoreCode",
    toAmino: ({
      sender,
      wasmByteCode,
      instantiatePermission
    }: MsgStoreCode): MsgStoreCodeAminoType["value"] => {
      return {
        sender: omitDefault(sender),
        wasm_byte_code: toBase64(wasmByteCode),
        instantiate_permission: {
          permission: instantiatePermission.permission,
          address: omitDefault(instantiatePermission.address)
        }
      };
    },
    fromAmino: ({
      sender,
      wasm_byte_code,
      instantiate_permission
    }: MsgStoreCodeAminoType["value"]): MsgStoreCode => {
      return {
        sender,
        wasmByteCode: fromBase64(wasm_byte_code),
        instantiatePermission: {
          permission: accessTypeFromJSON(instantiate_permission.permission),
          address: instantiate_permission.address
        }
      };
    }
  }
};"
`;
